# wg-x

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_IMPROVEMENTS.md  LAYOUT_VISUAL_GUIDE.md  LICENSE  QUICK_START.md  README.md  RELEASE_0.2.4.md  index.html  package-lock.json  package.json  vite.config.js  wg-x-daemon.service
.github/workflows/: build.yml
scripts/: update-version.js
src/: App.jsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: wireguard-go-aarch64-apple-darwin  wireguard-go-aarch64-unknown-linux-gnu  wireguard-go-x86_64-apple-darwin  wireguard-go-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/examples/: wireguard-sidecar.md
src-tauri/icons/: icon.icns
src-tauri/src/: daemon.rs  daemon_install.rs  daemon_ipc.rs  lib.rs  main.rs  sync.rs  tunnel.rs  tunnel_linux.rs  tunnel_macos.rs  tunnel_windows.rs  webdav.rs
src-tauri/src/commands/: config_templates.rs  env_config.rs  history_service.rs  key_management.rs  misc_commands.rs  mod.rs  persistence.rs  server_service.rs  webdav_commands.rs
src-tauri/zh-Hans.lproj/: InfoPlist.strings
src/components/ConfigTabs/: index.jsx  style.css
src/components/ConfirmDialog/: index.jsx  style.css
src/components/DaemonPanel/: index.jsx  style.css
src/components/HistoryDetailModal/: index.jsx  style.css
src/components/Stepper/: index.jsx  style.css
src/components/Toast/: Toast.jsx  style.css
src/components/UpdateProgressDialog/: index.jsx  style.css
src/hooks/: usePeerStatsListener.js  useToast.js
src/pages/ConfigGeneratorView/: index.jsx  style.css
src/pages/HistoryView/: index.jsx  style.css
src/pages/ServerManagementView/: index.jsx
src/pages/TunnelManagementView/: index.jsx  style.css
src/pages/TunnelManagementView/components/: ModeSelector.jsx  PeerConfigModal.jsx  PeerListModal.jsx  PeerQrcodeDisplay.jsx  TunnelCard.jsx  TunnelDetailModal.jsx  index.js
src/pages/WebDavSettingsView/: index.jsx  style.css
src/styles/: App.css  ConfigLayout.css
src/utils/: updateManager.js
